--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "lib/index.js",
   "scripts": {
     "lint": "jshint lib test && jscs lib test",
-    "test": "npm run lint && mocha"
+    "coverage": "./node_modules/.bin/istanbul cover ./node_modules/mocha/bin/_mocha -- -u bdd -R spec --recursive test",
+    "test": "npm run lint && mocha && npm run coverage"
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "jscs": "^1.5.9",
     "jshint": "^2.5.4",
     "mocha": "*",
+    "istanbul": "0.3.5",
     "request": "*"
   },
   "files": [
