--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,11 @@
 language: node_js
+sudo: false
 
 node_js:
   - "0.10"
-  - "0.11"
+  - "0.12"
+  - "1.2"
 
+after_success:
+  - npm i coveralls
+  - cat ./coverage/lcov.info | coveralls
