--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/express/bem-bh.git"
+    "url": "https://github.com/express-bem/bh.git"
   },
   "keywords": [
     "express",
